--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </footer>
 
         <script type="module" src="js/script.js"></script>
-        <script>
+        <script type="text/javascript">
             window.onload = function () {
               document.body.classList.add('loaded_hiding');
               window.setTimeout(function () {
