--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
         </header>
         <main>
-            <div class="content">
+            <div class="content" id="content">
                 
             </div>
         </main>
