--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#coffee" id="need-border">COFFEE</a>
                     <a href="#dessert" id="need-border">DESSERTS</a>
                     <a href="#tea" id="need-border">TEA</a>
-                    <a href="#actions">ACTIONS</a>
+                    <a href="#actions/coffee_action">ACTIONS</a>
                     <a href="#" id="menu" class="icon">&#9776;</a>
                 </div>
             </nav>
