--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
             <div class="button-cart">
                 <a class="button-cart__icon-wrap" href="#cart">
-                    <div class="button-cart--info-quantity">00</div>
+                    <div class="button-cart--info-quantity" id="cart-counter">00</div>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 510 510">
                         <path 
                         d="M153,408c-28.05,0-51,22.95-51,51s22.95,51,51,51s51-22.95,51-51S181.05,408,153,408z
