--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         c-28.05,0-51,22.95-51,51s22.95,51,51,51s51-22.95,51-51S436.05,408,408,408z"></path>
                     </svg>
                 </a>
-                <button type="button" class="button-cart__order-button" disabled="">Заказать</button>
+                <!-- <button type="button" class="button-cart__order-button" disabled="">Заказать</button> -->
             </div>
             
         </header>
