--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/cart.css" >
         <link rel="stylesheet" href="css/actions.css" >
         <link rel="stylesheet" href="css/product.css" >
+        <link rel="stylesheet" href="css/order.css" >
 
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet">
     </head>
